--- a/ui/index.html
+++ b/ui/index.html
@@ -37,57 +37,15 @@
 
       <div class="row">
         <div class="col">
-          <label for="prompt_version">Prompt Version</label>
-          <select id="prompt_version" name="prompt_version">
-            <option value="rpl_g5_v4" selected>rpl_g5_v4</option>
-            <option value="rpl_g5_v2">rpl_g5_v2</option>
-            <option value="rpl_g5_v3">rpl_g5_v3</option>
-          </select>
-        </div>
-        <div class="col">
-          <label for="model">Model</label>
-          <select id="model" name="model">
-            <option value="gpt-5" selected>gpt-5</option>
-          </select>
-        </div>
-        <div class="col">
           <label>Mock</label>
           <div class="inline"><input type="checkbox" id="mock" name="mock" /><span class="hint">no network</span></div>
         </div>
       </div>
 
-      <details>
-        <summary>Advanced settings (defaults shown)</summary>
-        <div class="row">
-          <div class="col">
-            <label for="K">K</label>
-            <input type="number" id="K" name="K" value="16" min="1" />
-          </div>
-          <div class="col">
-            <label for="R">R</label>
-            <input type="number" id="R" name="R" value="2" min="1" />
-          </div>
-          <div class="col">
-            <label for="T">T</label>
-            <input type="number" id="T" name="T" value="8" min="1" />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <label for="B">B (bootstrap)</label>
-            <input type="number" id="B" name="B" value="5000" min="100" />
-          </div>
-          <div class="col">
-            <label for="max_output_tokens">max_output_tokens</label>
-            <input type="number" id="max_output_tokens" name="max_output_tokens" value="1024" min="64" />
-          </div>
-        </div>
-        <div class="hint">Defaults reflect operating settings; change only if needed.</div>
-      </details>
+      <div class="hint">Uses defaults from runs/rpl_example.yaml and prompt rpl_g5_v4.</div>
 
       <button type="submit" class="cta">ANALYZE CLAIM</button>
     </form>
   </div>
 </body>
 </html>
-
