[UI][Minimal] Rename Mode option from 'Internal Retrieval' to 'Internet Search' (front-end only)

--- a/ui/index.html
+++ b/ui/index.html
@@ -48,7 +48,7 @@
           <label for="mode">Mode</label>
           <select id="mode" name="ui_mode">
             <option value="prior" selected>Internal Knowledge Only (no retrieval)</option>
-            <option value="internal-retrieval">Internal Retrieval</option>
+            <option value="internet-search">Internet Search</option>
             <option value="user-data">User Data</option>
           </select>
         </div>
