[UI][Minimal] Grey out non-GPT‑5 models and non-prior modes as disabled with '(coming soon)' labels

--- a/ui/index.html
+++ b/ui/index.html
@@ -39,17 +39,17 @@
           <label for="model">Model</label>
           <select id="model" name="ui_model">
             <option value="gpt-5" selected>GPT‑5</option>
-            <option value="claude-4.1">Claude 4.1</option>
-            <option value="grok-4">Grok 4</option>
-            <option value="deepseek-r1">DeepSeek R1</option>
+            <option value="claude-4.1" disabled>Claude 4.1 (coming soon)</option>
+            <option value="grok-4" disabled>Grok 4 (coming soon)</option>
+            <option value="deepseek-r1" disabled>DeepSeek R1 (coming soon)</option>
           </select>
         </div>
         <div class="col">
           <label for="mode">Mode</label>
           <select id="mode" name="ui_mode">
             <option value="prior" selected>Internal Knowledge Only (no retrieval)</option>
-            <option value="internet-search">Internet Search</option>
-            <option value="user-data">User Data</option>
+            <option value="internet-search" disabled>Internet Search (coming soon)</option>
+            <option value="user-data" disabled>User Data (coming soon)</option>
           </select>
         </div>
       </div>
