--- a/ui/index.html
+++ b/ui/index.html
@@ -8,9 +8,10 @@
     :root { --bg:#0a0a0a; --fg:#cfe9cf; --green:#00ff41; --muted:#7aa37a; }
     *{ box-sizing:border-box; }
     html,body{ margin:0; padding:0; background:var(--bg); color:var(--fg); font-family:'Courier New', monospace; }
-    .wrap{ max-width:800px; margin:40px auto; padding:0 16px; }
-    .title{ font-size:48px; color:var(--green); text-shadow:0 0 20px rgba(0,255,65,0.35); letter-spacing:4px; margin:0 0 6px; }
-    .screen{ font-size:12px; color:var(--muted); margin:0 0 16px; }
+    .topbar{ position:fixed; top:0; left:0; right:0; height:56px; display:flex; align-items:center; padding:0 16px; z-index:10; }
+    .brand{ color:var(--green); font-weight:800; font-size:28px; letter-spacing:4px; text-shadow:0 0 16px rgba(0,255,65,0.3); }
+    .wrap{ max-width:800px; margin:80px auto 40px; padding:0 16px; }
+    .question{ font-size:32px; font-weight:800; color:var(--fg); text-shadow:0 0 14px rgba(0,255,65,0.18); margin:0 0 14px; }
     .sub{ margin:6px 0 18px; color:var(--muted); }
     .card{ border:1px solid rgba(0,255,65,0.25); border-radius:8px; padding:16px; background:rgba(255,255,255,0.02); }
     label{ display:block; margin:10px 0 6px; }
@@ -26,9 +27,9 @@
   <!-- Screen 1 -->
 </head>
 <body>
+  <div class="topbar"><div class="brand">HERETIX</div></div>
   <div class="wrap">
-    <h1 class="title" style="text-align:left">HERETIX</h1>
-    <div class="sub"><strong>How likely is the following true?</strong></div>
+    <div class="question">How likely is the following true?</div>
 
     <form class="card" method="post" action="/run">
       <label for="claim">Claim</label>
