[UI][Minimal] Set claim max to 280 chars (tweet length); [Config] raise max_prompt_chars to 1500; reconcile UI claim cap with backend composed prompt cap

--- a/ui/index.html
+++ b/ui/index.html
@@ -32,8 +32,8 @@
     <div class="question">How likely is the following true?</div>
 
     <form class="card" method="post" action="/run">
-      <label for="claim">Claim</label>
-      <textarea id="claim" name="claim" rows="6" maxlength="600" placeholder="e.g., Tariffs don't cause inflation" required></textarea>
+      <label for="claim">Claim <span class="hint">(max 280 characters)</span></label>
+      <textarea id="claim" name="claim" rows="6" maxlength="280" placeholder="e.g., Tariffs don't cause inflation" required></textarea>
 
       <div class="row" style="margin-top:10px;">
         <div class="col">
