[UI][Minimal] Show selected Model and Mode on results; pass UI selections through job record (display-only)

--- a/ui/results.html
+++ b/ui/results.html
@@ -24,6 +24,7 @@
     <div class="claim">“{CLAIM}”</div>
     <div class="hero">{PERCENT}%</div>
     <div class="verdict">{VERDICT}</div>
+    <div class="meta">Model: {UI_MODEL} · Mode: {UI_MODE}</div>
   </div>
 </body>
 </html>
