--- a/ui/results.html
+++ b/ui/results.html
@@ -13,7 +13,7 @@
     .hero{ margin-top:24px; font-size:120px; line-height:1; color:var(--green); text-shadow:0 0 26px rgba(0,255,65,0.35); font-weight:800; }
     .verdict{ font-size:20px; margin-top:4px; }
     .metrics{ margin-top:10px; color:var(--muted); }
-    .meta{ margin-top:8px; font-size:12px; color:var(--muted); }
+    .meta{ margin-top:16px; font-size:24px; font-weight:800; color:var(--fg); }
     .clear{ clear:both; }
   </style>
 </head>
