--- a/ui/results.html
+++ b/ui/results.html
@@ -3,43 +3,137 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HERETIX · Result</title>
+  <title>Heretix · Result</title>
   <style>
-    :root { --bg:#0a0a0a; --fg:#cfe9cf; --green:#00ff41; --muted:#7aa37a; }
-    html,body{ margin:0; padding:0; background:var(--bg); color:var(--fg); font-family:'Courier New', monospace; }
-    .wrap{ max-width:800px; margin:40px auto; padding:0 16px; text-align:center; }
-    .back{ color:var(--green); text-decoration:none; float:left; }
-    .claim{ margin-top:12px; font-size:18px; }
-    .hero{ margin-top:24px; font-size:120px; line-height:1; color:var(--green); text-shadow:0 0 26px rgba(0,255,65,0.35); font-weight:800; }
-    .verdict{ font-size:20px; margin-top:4px; }
-    .metrics{ margin-top:10px; color:var(--muted); }
-    .meta{ margin-top:16px; font-size:24px; font-weight:800; color:var(--fg); }
-    .clear{ clear:both; }
-    .whybox{ margin:18px auto 0; max-width:820px; text-align:left; border:1px solid rgba(255,255,255,0.15); border-radius:10px; padding:16px 18px; background:rgba(255,255,255,0.03); box-shadow:0 0 24px rgba(255,255,255,0.06) inset; }
-    .whybox.true{ border-color: rgba(0,255,65,0.55); box-shadow: 0 0 22px rgba(0,255,65,0.22) inset; }
-    .whybox.false{ border-color: rgba(255,80,80,0.55); box-shadow: 0 0 22px rgba(255,80,80,0.20) inset; }
-    .whybox.uncertain{ border-color: rgba(255,193,7,0.55); box-shadow: 0 0 22px rgba(255,193,7,0.20) inset; }
-    .whyhead{ font-size:18px; font-weight:800; margin-bottom:8px; color:var(--fg); }
-    .whylist{ margin:0; padding-left:18px; }
-    .whylist li{ margin:4px 0; }
-    .note{ margin-top:6px; color:var(--muted); font-size:12px; opacity:0.9; }
+    :root {
+      --bg: #060606;
+      --fg: #e3ffe3;
+      --muted: #8ea88e;
+      --bright: #00ff41;
+      --warn: #ffb347;
+      --card: rgba(255,255,255,0.02);
+      --border: rgba(0,255,65,0.3);
+    }
+    * { box-sizing:border-box; }
+    html, body { margin:0; padding:0; background:var(--bg); color:var(--fg); font-family:"Inter", "Helvetica Neue", Arial, sans-serif; }
+    a { color:var(--bright); text-decoration:none; }
+    .wrap { max-width:960px; margin:0 auto; padding:48px 20px 80px; }
+    .back { display:inline-flex; align-items:center; gap:6px; color:var(--muted); font-size:14px; text-transform:uppercase; letter-spacing:1px; }
+    .back:hover { color:var(--bright); }
+
+    .hero { margin-top:28px; padding:32px; border-radius:20px; background:radial-gradient(circle at top, rgba(0,255,65,0.18), rgba(0,0,0,0.65)); border:1px solid var(--border); box-shadow:0 0 42px rgba(0,255,65,0.25); display:flex; flex-wrap:wrap; gap:34px; align-items:center; justify-content:space-between; }
+    .percent { font-size:clamp(72px, 12vw, 128px); line-height:1; color:var(--bright); text-shadow:0 0 36px rgba(0,255,65,0.35); font-weight:700; }
+    .verdict { font-size:20px; text-transform:uppercase; letter-spacing:3px; margin-top:8px; }
+    .claim { font-size:20px; line-height:1.5; margin:12px 0 0; color:var(--fg); }
+    .interpretation { font-size:18px; color:var(--muted); margin-top:16px; max-width:480px; }
+
+    .stack { margin-top:48px; display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:24px; }
+    .card { padding:24px; border-radius:18px; border:1px solid rgba(0,255,65,0.2); background:var(--card); box-shadow:0 0 24px rgba(0,0,0,0.25); }
+    .card h2 { margin:0 0 12px; font-size:20px; }
+    .card ul { margin:0; padding-left:22px; color:var(--muted); line-height:1.6; }
+    .pill { display:inline-flex; align-items:center; gap:6px; padding:6px 12px; border-radius:999px; font-size:12px; letter-spacing:1px; text-transform:uppercase; border:1px solid rgba(0,255,65,0.4); color:var(--bright); background:rgba(0,255,65,0.1); margin-bottom:16px; }
+
+    details { border:1px solid rgba(0,255,65,0.2); border-radius:16px; padding:20px 24px; background:rgba(0,0,0,0.35); margin-top:28px; }
+    summary { cursor:pointer; font-weight:600; font-size:16px; }
+    details[open] summary { color:var(--bright); }
+    .advanced-grid { margin-top:18px; display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:18px; color:var(--muted); }
+    .metric-label { font-size:13px; letter-spacing:1px; text-transform:uppercase; color:rgba(0,255,65,0.7); margin-bottom:4px; }
+    .metric-value { font-size:22px; color:var(--fg); }
+
+    .actions { margin-top:40px; display:flex; flex-wrap:wrap; gap:16px; }
+    .btn { display:inline-flex; align-items:center; justify-content:center; padding:14px 22px; border-radius:14px; font-weight:600; border:0; cursor:pointer; transition:transform 0.2s ease, box-shadow 0.2s ease; }
+    .btn-primary { background:var(--bright); color:#041105; box-shadow:0 16px 32px rgba(0,255,65,0.18); }
+    .btn-primary:hover { transform:translateY(-2px); box-shadow:0 20px 36px rgba(0,255,65,0.28); }
+    .btn-secondary { background:rgba(255,255,255,0.08); color:var(--fg); border:1px solid rgba(0,255,65,0.2); }
+    .btn-secondary:hover { transform:translateY(-2px); border-color:rgba(0,255,65,0.4); }
+
+    .note { margin-top:12px; color:var(--muted); font-size:13px; }
+
+    @media (max-width:640px){
+      .hero { padding:24px; }
+      .interpretation { max-width:none; }
+      .actions { flex-direction:column; align-items:stretch; }
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
     <a class="back" href="/">← New claim</a>
-    <div class="clear"></div>
-    <div class="claim">“{CLAIM}”</div>
-    <div class="hero">{PERCENT}%</div>
-    <div class="verdict">{VERDICT}</div>
-    <div class="meta">Model: {UI_MODEL} · Mode: {UI_MODE}</div>
-    <div class="whybox {WHY_KIND}">
-      <div class="whyhead">{WHY_HEAD}</div>
-      <ul class="whylist">
-        {WHY_ITEMS}
-      </ul>
-      <div class="note">{NOTE}</div>
+
+    <section class="hero">
+      <div>
+        <div class="pill">{UI_MODEL} · {UI_MODE}</div>
+        <div class="percent">{PERCENT}%</div>
+        <div class="verdict">{VERDICT}</div>
+      </div>
+      <div>
+        <div class="claim">“{CLAIM}”</div>
+        <div class="interpretation">{INTERPRETATION}</div>
+      </div>
+    </section>
+
+    <div class="stack">
+      <div class="card">
+        <h2>{WHY_HEAD}</h2>
+        <ul>
+          {WHY_ITEMS}
+        </ul>
+      </div>
+      <div class="card">
+        <h2>How to read this</h2>
+        <p class="note">This is GPT‑5’s belief using the Raw Prior Lens—no web search, no outside evidence.</p>
+        <p class="note">Use it to understand where the model already leans before you add new facts or arguments.</p>
+      </div>
+    </div>
+
+    <details>
+      <summary>Advanced details</summary>
+      <div class="advanced-grid">
+        <div>
+          <div class="metric-label">Confidence width</div>
+          <div class="metric-value">{ADV_WIDTH}</div>
+        </div>
+        <div>
+          <div class="metric-label">Template stability</div>
+          <div class="metric-value">{ADV_STABILITY}</div>
+        </div>
+        <div>
+          <div class="metric-label">Policy compliance</div>
+          <div class="metric-value">{ADV_COMPLIANCE}</div>
+        </div>
+      </div>
+      <p class="note">Narrower confidence widths mean the model gave consistent answers. Stability reflects how similar the paraphrased prompts were. Compliance shows how often responses followed the Raw Prior rules.</p>
+    </details>
+
+    <div class="actions">
+      <a class="btn btn-primary" href="/?quick=1">Ask another claim</a>
+      <button class="btn btn-secondary" id="copy-claim">Copy claim text</button>
     </div>
   </div>
+
+  <script>
+    (function(){
+      var btn = document.getElementById('copy-claim');
+      if (!btn) return;
+      var claimText = "{CLAIM}";
+      btn.addEventListener('click', function(){
+        if (!navigator.clipboard) {
+          var textarea = document.createElement('textarea');
+          textarea.value = claimText;
+          textarea.setAttribute('readonly', '');
+          textarea.style.position = 'absolute';
+          textarea.style.left = '-9999px';
+          document.body.appendChild(textarea);
+          textarea.select();
+          document.execCommand('copy');
+          document.body.removeChild(textarea);
+        } else {
+          navigator.clipboard.writeText(claimText).catch(function(){ /* silent */ });
+        }
+        btn.textContent = 'Claim copied!';
+        setTimeout(function(){ btn.textContent = 'Copy claim text'; }, 2000);
+      });
+    })();
+  </script>
 </body>
 </html>
