--- a/ui/results.html
+++ b/ui/results.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div class="wrap">
-    <a class="back" href="/">← New claim</a>
+    <a class="back" href="/?quick=1">← New claim</a>
 
     <section class="hero">
       <div>
