--- a/ui/results.html
+++ b/ui/results.html
@@ -107,19 +107,19 @@
 
     <div class="actions">
       <a class="btn btn-primary" href="/?quick=1">Ask another claim</a>
-      <button class="btn btn-secondary" id="copy-claim">Copy claim text</button>
+      <button class="btn btn-secondary" id="copy-summary" data-summary="{SUMMARY_ATTR}">Copy summary</button>
     </div>
   </div>
 
   <script>
     (function(){
-      var btn = document.getElementById('copy-claim');
+      var btn = document.getElementById('copy-summary');
       if (!btn) return;
-      var claimText = "{CLAIM}";
+      var summaryText = btn.getAttribute('data-summary') || '';
       btn.addEventListener('click', function(){
         if (!navigator.clipboard) {
           var textarea = document.createElement('textarea');
-          textarea.value = claimText;
+          textarea.value = summaryText;
           textarea.setAttribute('readonly', '');
           textarea.style.position = 'absolute';
           textarea.style.left = '-9999px';
@@ -128,10 +128,10 @@
           document.execCommand('copy');
           document.body.removeChild(textarea);
         } else {
-          navigator.clipboard.writeText(claimText).catch(function(){ /* silent */ });
+          navigator.clipboard.writeText(summaryText).catch(function(){ /* silent */ });
         }
-        btn.textContent = 'Claim copied!';
-        setTimeout(function(){ btn.textContent = 'Copy claim text'; }, 2000);
+        btn.textContent = 'Summary copied!';
+        setTimeout(function(){ btn.textContent = 'Copy summary'; }, 2000);
       });
     })();
   </script>
