Remove landing page claim privacy note

--- a/ui/index.html
+++ b/ui/index.html
@@ -131,7 +131,7 @@
             </select>
           </div>
           <button class="primary" type="submit">Ask the model</button>
-          <div class="footnote">No accounts needed. We never browse the web with your claim. <span class="full-link"><a href="/">Need the full overview?</a></span></div>
+          <div class="footnote"><span class="full-link"><a href="/">Need the full overview?</a></span></div>
         </form>
       </div>
     </section>
