Remove quick-mode footnote text

--- a/ui/index.html
+++ b/ui/index.html
@@ -131,7 +131,7 @@
             </select>
           </div>
           <button class="primary" type="submit">Ask the model</button>
-          <div class="footnote"><span class="full-link"><a href="/">Need the full overview?</a></span></div>
+          <div class="footnote"></div>
         </form>
       </div>
     </section>
