--- a/ui/index.html
+++ b/ui/index.html
@@ -106,7 +106,7 @@
     <section class="hero" id="top">
       <div>
         <h1>Understand the AI answering your questions.</h1>
-        <p>Heretix asks GPT‑5, without any web browsing, what it already believes about your claim and then explains the answer in plain language.</p>
+        <p>Heretix measures how GPT‑5’s training data anchors your claim—no web browsing—and explains the result in plain language.</p>
         <div class="hero-examples">
           <button type="button" class="example-pill" data-example="Do tariffs cause inflation?">Do tariffs cause inflation?</button>
           <button type="button" class="example-pill" data-example="Solar panels never pay for themselves">Do solar panels pay for themselves?</button>
