Add standalone examples page

--- a/ui/how.html
+++ b/ui/how.html
@@ -50,6 +50,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/?quick=1">Run a claim</a></li>
+          <li><a href="/examples.html">Examples</a></li>
           <li><a href="/how.html" aria-current="page">How it works</a></li>
         </ul>
       </nav>
