--- a/ui/index.html
+++ b/ui/index.html
@@ -95,7 +95,7 @@
       <nav>
         <ul>
           <li><a href="/how.html">How it works</a></li>
-          <li><a href="#examples">Examples</a></li>
+          <li><a href="/examples.html">Examples</a></li>
           <li><a href="#faq">Learn</a></li>
         </ul>
       </nav>
