Rework examples page layout

--- a/ui/examples.html
+++ b/ui/examples.html
@@ -6,16 +6,17 @@
   <title>Heretix · Examples</title>
   <style>
     :root {
-      --bg: #050705;
-      --fg: #e8ffe8;
-      --muted: #8ba38b;
+      --bg: #040704;
+      --fg: #e5ffe5;
+      --muted: #8ca18c;
       --bright: #00ff41;
-      --border: rgba(0,255,65,0.25);
+      --panel: rgba(255,255,255,0.02);
+      --border: rgba(0,255,65,0.22);
     }
     * { box-sizing:border-box; }
     html,body { margin:0; padding:0; background:var(--bg); color:var(--fg); font-family:"Inter","Helvetica Neue",Arial,sans-serif; }
     a { color:var(--bright); text-decoration:none; }
-    header { position:sticky; top:0; backdrop-filter:blur(12px); background:rgba(5,7,5,0.9); border-bottom:1px solid rgba(0,255,65,0.12); z-index:20; }
+    header { position:sticky; top:0; backdrop-filter:blur(12px); background:rgba(4,7,4,0.9); border-bottom:1px solid rgba(0,255,65,0.12); z-index:20; }
     .nav { max-width:1100px; margin:0 auto; padding:14px 20px; display:flex; justify-content:space-between; align-items:center; }
     .brand { font-family:"Space Mono", monospace; font-size:20px; letter-spacing:4px; color:var(--bright); }
     nav ul { list-style:none; margin:0; padding:0; display:flex; gap:18px; font-size:14px; }
@@ -23,16 +24,27 @@
     nav a:hover { color:var(--bright); }
 
     main { max-width:1100px; margin:0 auto; padding:48px 20px 90px; }
-    h1 { font-size:clamp(34px,5vw,52px); margin:10px 0 12px; text-shadow:0 0 24px rgba(0,255,65,0.25); }
-    p.lead { margin:0 0 24px; color:var(--muted); font-size:18px; line-height:1.6; max-width:760px; }
-    .grid { margin-top:32px; display:grid; gap:24px; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); }
-    .card { border:1px solid var(--border); border-radius:18px; padding:24px; background:rgba(255,255,255,0.03); box-shadow:0 0 28px rgba(0,255,65,0.12); display:flex; flex-direction:column; gap:12px; }
-    .pct { font-size:40px; color:var(--bright); text-shadow:0 0 18px rgba(0,255,65,0.25); }
-    .verdict { font-size:14px; letter-spacing:3px; text-transform:uppercase; color:rgba(0,255,65,0.75); }
-    .claim { font-family:"Space Mono", monospace; font-size:16px; line-height:1.5; }
-    .bullets { margin:0; padding-left:18px; color:var(--muted); line-height:1.5; }
-    .meta { font-size:12px; color:rgba(232,255,232,0.6); }
-    .empty { margin-top:48px; text-align:center; color:var(--muted); }
+    h1 { font-size:clamp(34px,5vw,52px); margin:12px 0; text-shadow:0 0 26px rgba(0,255,65,0.25); }
+    p.lead { margin:0 0 28px; color:var(--muted); font-size:18px; line-height:1.6; max-width:760px; }
+
+    .examples { display:flex; flex-direction:column; gap:42px; }
+    .example { background:radial-gradient(circle at top, rgba(0,255,65,0.18), rgba(0,0,0,0.7)); border:1px solid var(--border); border-radius:24px; padding:32px; box-shadow:0 0 46px rgba(0,255,65,0.22); }
+    .hero { display:flex; flex-direction:column; gap:10px; }
+    .badge { align-self:flex-start; padding:6px 12px; border-radius:999px; font-size:12px; letter-spacing:1px; text-transform:uppercase; background:rgba(0,0,0,0.35); border:1px solid rgba(0,255,65,0.4); color:rgba(0,255,65,0.8); }
+    .percent { font-size:clamp(64px,11vw,108px); font-weight:700; color:var(--bright); text-shadow:0 0 35px rgba(0,255,65,0.35); }
+    .verdict { font-size:18px; letter-spacing:4px; text-transform:uppercase; color:rgba(0,255,65,0.9); }
+    .claim { font-size:20px; font-weight:600; margin-top:12px; }
+    .summary { font-size:18px; color:var(--muted); }
+
+    .detail-grid { margin-top:26px; display:grid; gap:18px; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); }
+    .panel { border:1px solid var(--border); border-radius:18px; padding:20px 22px; background:var(--panel); box-shadow:0 0 26px rgba(0,255,65,0.12); }
+    .panel h3 { margin:0 0 12px; font-size:18px; }
+    .panel ul { margin:0; padding-left:20px; color:var(--muted); line-height:1.6; }
+    .panel p { margin:0 0 12px; color:var(--muted); line-height:1.6; }
+    .metrics { display:flex; flex-wrap:wrap; gap:10px 18px; font-size:13px; color:rgba(229,255,229,0.75); }
+    .metrics span { display:inline-flex; align-items:center; gap:6px; }
+
+    .empty { display:{EMPTY_DISPLAY}; margin-top:48px; text-align:center; color:var(--muted); }
 
     footer { margin-top:80px; padding:24px 0; text-align:center; color:var(--muted); font-size:13px; border-top:1px solid rgba(0,255,65,0.1); }
     footer a { color:var(--muted); margin:0 12px; }
@@ -57,12 +69,12 @@
   </header>
 
   <main>
-    <h1>Recent claims</h1>
-    <p class="lead">These summaries come straight from the Raw Prior runs stored in your local Heretix database. They show the model’s prior, confidence, and top reasons. Run your own claim to add to this list.</p>
-    <div class="grid">
+    <h1>Examples</h1>
+    <p class="lead">Browse recent Raw Prior runs stored locally. Each card shows the prior probability, a plain-language verdict, and why GPT‑5’s training anchors the claim that way.</p>
+    <div class="examples">
       {EXAMPLES}
     </div>
-    <div class="empty" style="display:{EMPTY_DISPLAY};">No runs yet. Try <a href="/?quick=1">asking a claim</a> and the results will appear here.</div>
+    <div class="empty">No runs yet. Ask a claim and results will appear here.</div>
   </main>
 
   <footer>
