Point UI to production API domain

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="heretix-api-base" content="http://127.0.0.1:8000" />
+  <meta name="heretix-api-base" content="https://api.heretix.ai" />
   <title>Heretix · Understand the AI answering your questions</title>
   <style>
     :root {
